раздел условия в заявке на вакансию (#25)
