# models/api/vacancy/vacancy_request.go
@@ -27,6 +27,9 @@ type VacancyRequestData struct {
 	Description     string                 `json:"description"`       // Коментарий к заявке
 	OutInteraction  string                 `json:"out_interaction"`   // внешнее взаимодействие
 	InInteraction   string                 `json:"in_interaction"`    // внутреннее взаимодействие
+	Employment      models.Employment      `json:"employment"`        // Занятость
+	Experience      models.Experience      `json:"experience"`        // Опыт работы
+	Schedule        models.Schedule        `json:"schedule"`          // Режим работы
 }
 
 func (v VacancyRequestData) Validate() error {
@@ -96,6 +99,9 @@ func VacancyRequestConvert(rec dbmodels.VacancyRequest) VacancyRequestView {
 			Description:     rec.Description,
 			OutInteraction:  rec.OutInteraction,
 			InInteraction:   rec.InInteraction,
+			Employment:      rec.Employment,
+			Experience:      rec.Experience,
+			Schedule:        rec.Schedule,
 		},
 		ID:           rec.ID,
 		CreationDate: rec.CreatedAt,
